[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/HUD/MainMenu_Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/arboratory_logo_a.png" type="Texture" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/HUD/button_orange.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/Main Menu Theme.ogg" type="AudioStream" id=5]

[node name="Control" type="Control"]
anchor_right = 0.903
anchor_bottom = 1.849
margin_right = -941.672
margin_bottom = -254.4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 0.302
anchor_bottom = 0.159
margin_left = 9.0
margin_top = -9.0
margin_right = 409.0
margin_bottom = 458.055
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 1.66854
margin_top = 6.27258
margin_right = 1921.67
margin_bottom = 1086.27
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="Button" parent="."]
anchor_right = 0.431
anchor_bottom = 0.218
margin_left = 774.0
margin_top = 671.0
margin_right = 1163.0
margin_bottom = 618.61
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeButton" type="Button" parent="."]
margin_left = 779.0
margin_top = 824.104
margin_right = 1166.0
margin_bottom = 956.104
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VolumeButton"]
margin_left = 90.0
margin_top = 44.0
margin_right = 140.0
margin_bottom = 94.0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 4, 4 )
text = "Volume
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 152.0
margin_top = 166.0
margin_right = 240.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Arboratory!
Grow Trees!  

...Date Trees?
"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 849.732
margin_top = 979.104
margin_right = 1099.73
margin_bottom = 1063.1
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = 48.0
margin_top = 28.0
margin_right = 98.0
margin_bottom = 78.0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 3, 3 )
text = "Credits
"

[node name="Main Menu Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -33.242
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VolumeButton" to="." method="_on_VolumeButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
